--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -31,8 +31,45 @@ body.lock{
 
 /* style page */
 
-.preload {}
-.preloader {}
+.preloader {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	background: #c6c6c6;
+	z-index: 999;
+	transition: .1 all;
+	opacity: 1;
+	visibility: visible;
+}
+
+.preloader.done {
+	opacity: 0;
+	visibility: hidden;
+}
+
+.loader {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 30px;
+	animation: .9s opacity infinite linear;
+}
+
+@keyframes opacity{
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: .1;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
 
 /* preloader */
 
@@ -41,7 +78,6 @@ body.lock{
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100%;
 	z-index: 50;
 }
 
@@ -54,6 +90,7 @@ body.lock{
 }
 
 .header__logo {
+	transform: scale(1.3);
 	overflow: hidden;
 	border-radius: 50%;
 	position: relative;
@@ -117,7 +154,7 @@ body.lock{
 }
 
 .header__nav.active {
-	top: 0%;
+	left: 0%;
 }
 
 .header__burger.active span {
@@ -157,16 +194,20 @@ body.lock{
 		overflow: auto;
 	}
 
+	.header__logo {
+		z-index: 3;
+	}
+
 	.header__nav {
 		align-items: start;
 		position: fixed;
 		flex-direction: column;
-		left: 0;
-		top: -100%;
-		background: rgba(0, 0, 0, .5);
+		left: -100%;
+		top: 0;
+		background: #c6c6c699;
 		width: 100%;
 		height: 100%;
-		padding: 50px 0px;
+		padding: 90px 0px;
 	}
 }
 
@@ -180,10 +221,10 @@ body.lock{
 
 .intro {
 	max-width: 100%;
+	background: #c1c1c1;
 }
 
 .intro img {
-	display: block;
 	width: 100%;
 }
 
@@ -289,7 +330,7 @@ body.lock{
 
 .team__block-avatar img {
 	display: block;
-	width: 100%;
+	max-width: 100%;
 }
 
 .team__block-text {
@@ -325,13 +366,14 @@ body.lock{
 
 .portf__inner {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	flex-wrap: wrap;
+	align-content: center;
 }
 
 .portf__content {
 	position: relative;
-	width: 300px;
+	max-width: 460px;
 	margin: 40px 10px 60px;
 }
 
@@ -429,14 +471,12 @@ body.lock{
 
 .footer {
 	background: gray;
-	outline: 1px solid red;
 	flex: 0 0 auto;
+	padding: 0px 10px;
 }
 
 .footer__body {
-	display: flex;
-	justify-content: space-around;
-	flex-wrap: wrap;
+
 }
 
 .footer__body li{
@@ -447,35 +487,24 @@ body.lock{
 	font-family: 'Cairo', sans-serif;
 }
 
+.footer__list {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
 /* footer */
 
 .contacts {
 	display: flex;
-	flex-direction: column;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .contacts__item {
 	text-align: center;
 	display: flex;
 	align-items: center;
-}
-
-@media (max-width: 579px){
-
-	.contacts {
-		flex-direction: row;
-		flex-wrap: wrap;
-		text-align: center;
-	}
-
-	.contacts__item {
-		display: block;
-		margin: 15px 5px;
-	}
-
-	.contacts__item a {
-		margin: 0 auto
-	}
 }
 
 .contacts__item a {
