--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&display=swap');
+@import 'zeroing.css';
 
-*,*:before,*:after{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&display=swap');
 
 html,body{
 	min-height: 100%;
-	box-sizing: border-box;
 }
 
 /* zeroing */
@@ -81,6 +75,16 @@ body.lock{
 	z-index: 50;
 }
 
+.header::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background: rgba(0, 0, 0, .5);
+}
+
 .header__body {
 	position: relative;
 	padding: 10px 15px;
@@ -95,7 +99,7 @@ body.lock{
 	border-radius: 50%;
 	position: relative;
 	width: 38px;
-	border: 2px solid #000;
+	border: 2px solid #fff;
 	height: 38px;
 }
 
@@ -175,7 +179,7 @@ body.lock{
 }
 
 .header__link {
-	color: #000;
+	color: #fff;
 	font-family: 'Cairo', sans-serif;
 	margin-left: 1.5em;
 	font-size: 22px;
@@ -366,12 +370,12 @@ body.lock{
 
 .portf__inner {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	flex-wrap: wrap;
-	align-content: center;
 }
 
 .portf__content {
+	display: block;
 	position: relative;
 	max-width: 460px;
 	margin: 40px 10px 60px;
@@ -392,6 +396,12 @@ body.lock{
 	left: 0;
 	top: 0;
 	background: #f4f4f4;
+}
+
+@media(max-width: 811px) {
+	.portf__content {
+		max-width: 100%;
+	}
 }
 
 .portf__content p {
